@@ -1,5 +1,7 @@
 2016-06-14  c.hetherington  <cth@carlh.net>
 
+	* Basic guessing of audio channels from filenames (#393).
+
 	* Fix incorrectly-reported frame rate when importing
 	3D DCPs.
 
